# bachelors

./: references.bib
proposal/: proposal.tex
stm-pps/: Cargo.toml
stm-pps/.cargo/: config.toml
stm-pps/src/: main.rs
thesis/: references.bib  thesis.tex
thesis/images/: IMG_6105.HEIC  IMG_6106.HEIC
