[package]
name = "stm-pps"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { path = "/home/suck/self/embassy-mmskv/embassy-stm32/", version = "0.1.0", features = [
    "stm32h723zg",
    "memory-x",
    "unstable-pac",
    "time-driver-any",
    "exti",
    "defmt",
] }
embassy-sync = { path = "/home/suck/self/embassy-mmskv/embassy-sync/", version = "0.5.0", features = ["defmt"] }
embassy-executor = { path = "/home/suck/self/embassy-mmskv/embassy-executor/", version = "0.5.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
    "defmt",
] }
embassy-time = { path = "/home/suck/self/embassy-mmskv/embassy-time/", version = "0.3.0", features = [
    "tick-hz-10_000_000",
    "defmt-timestamp-uptime",
    "defmt",
] }
embassy-net = { path = "/home/suck/self/embassy-mmskv/embassy-net/", version = "0.4.0", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
    "defmt",
] }
embassy-usb = { path = "/home/suck/self/embassy-mmskv/embassy-usb/", version = "0.1.0", features = ["defmt"] }
embassy-usb-driver = { path = "/home/suck/self/embassy-mmskv/embassy-usb-driver/", version = "0.1.0", features = ["defmt"] }

embedded-io-async = { version = "0.6.1" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.30", default-features = false, features = [
    "async-await",
] }
heapless = { version = "0.8", default-features = false }
nb = "1.1.0"
rand_core = "0.6.4"
critical-section = "1.1"
embedded-storage = "0.3.1"
static_cell = "2"
stm32h7xx-hal = { version = "0.15.1", features = ["stm32h735", "rt", "defmt"] }

[profile.release]
opt-level = "s"
lto = "fat"
debug = 2
